--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,13 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgb(33,33,33);
+    background-image: url('./images/space.webp');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
+
+h2 { position: absolute; top: 100px; font-size: 30px; letter-spacing: -1px; color: #dfd9d0; text-shadow: 1px 1px 0 #000; margin: 10px 0 24px; text-align: center; line-height: 50px; }
 
 .planets-container {
     width: 150px;
@@ -215,7 +220,7 @@ body {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    background-color: rgb(248,244,163);
+    background-color: rgb(248,244,255);
     box-shadow: 0 0 60px rgb(253,203,163), 0 0 98px rgb(184, 160, 26);
     transform: scaleX(0.2);
     position: absolute;
